--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,23 +22,28 @@ body {
 
 
 .buscador {
-    background-color: #ebebeb;
     margin-left: 10px;
     height: 25px;
-    border: 1px solid black;
     display: inline-block;
     padding: 2px;
 }
 
+.fa-magnifying-glass {
+    position: relative;
+    right: 40px;
+    top: 3px;
+}
 
 .navbar {
     background-color:#ebebeb;
     color:#666;
-    height: 25px;
+    height: 30px;
     margin-left:20px;
     border: 1px solid black;
     display: inline-block;
-    padding: 2px;
+    padding: 5px;
+    width: 260px;
+    border-radius: 19px;
 }
 
 .img-navbar {
@@ -97,29 +102,32 @@ section.banner img{
 }
 
 .precios {
-    font-size: 18px;
+    font-size: 20px;
     text-align: left;
 }
 
 
 .descuentos {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: normal;
-    padding-left: 20px;
+    padding-left: 30px;
     color: #39b54a;
 }
 
 .descripcion {
-    display: none;
-    font-size: 18px;
+    font-size: 20px;
     text-align: center;
     margin-top: 20px;
-    transition: display contents;
+    opacity: 0;
+    transition: 1s;
 }
 
 .descripcion:hover {
-    display:flex;
+    opacity: 1
+
 }
+
+
 
 main section article i {
     display: block;
@@ -134,6 +142,10 @@ main section article i {
     right: 20px;
     top: -15px;
     color: #39b54a;
+}
+
+main section article i:hover {
+    transform: rotateZ(-90deg);
 }
 
 div.ultima-visita,
@@ -172,7 +184,7 @@ h4 {
 }
 
 .copyright {
-    text-align: left;
+    text-align: center;
 }
 
 main {
@@ -216,6 +228,13 @@ div article div.main-articulos {
     .h3-register {
         text-align: left;
     }
+    .navbar {
+        height: 45px;
+    }
+    .fa-magnifying-glass {
+        position: relative;
+        top: 13px;
+    }
 }
 
 
@@ -225,6 +244,7 @@ div article div.main-articulos {
     }
     main section article {
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    transition: box shadow 450ms;
     }
     main section div.productos {
         display: flex;
@@ -277,6 +297,23 @@ div article div.main-articulos {
         margin-top: 30px;
         display: flex;
         justify-content: space-between;
+        margin-bottom: 10px;
+    }
+    .navbar {
+        background-color:#ebebeb;
+        color:#666;
+        height: 30px;
+        margin-left:20px;
+        border: 1px solid black;
+        display: inline-block;
+        padding: 5px;
+        width: 260px;
+        border-radius: 19px;
+    }
+    .fa-magnifying-glass {
+        position: relative;
+        right: 40px;
+        top: 3px;
     }
 }
 
@@ -334,6 +371,23 @@ div article div.main-articulos {
         margin-top: 30px;
         display: flex;
         justify-content: space-between;
+        margin-bottom: 10px;
+    }
+    .navbar {
+        background-color:#ebebeb;
+        color:#666;
+        height: 30px;
+        margin-left:20px;
+        border: 1px solid black;
+        display: inline-block;
+        padding: 5px;
+        width: 260px;
+        border-radius: 19px;
+    }
+    .fa-magnifying-glass {
+        position: relative;
+        right: 40px;
+        top: 5px;
     }
 }
 
